--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,31 @@ body {
 }
 
 .movie-display {
-  display: flex;
-  justify-content: space-around;
   padding: 100px;
 }
 
 .movies {
   width: 250px;
+  height: 400px;
+  padding: 10px;
 }
 
 .searchInput {
   width: 350px;
   padding: 15px;
+}
+
+.display {
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 20px 60px 20px;
+}
+
+.moviePoster {
+  width: 300px;
+}
+
+.info {
+  width: 50%;
 }
